--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -1125,6 +1125,7 @@
         <item>@string/systemui_theme_wallpaper</item>
         <item>@string/systemui_theme_light</item>
         <item>@string/systemui_theme_dark</item>
+	<item>@string/systemui_theme_black</item>
     </string-array>
 
     <!-- Values for SystemUI theme preference. -->
@@ -1132,6 +1133,7 @@
         <item>0</item>
         <item>1</item>
         <item>2</item>
+	<item>3</item>
     </string-array>
 
     <string-array name="gesture_prevent_ringing_entries" translatable="false">
